--- a/src/assets/json/locale/en.json
+++ b/src/assets/json/locale/en.json
@@ -89,137 +89,13 @@
       },
       "14":{
         "description": "This project is a website under development built with Next.js. It is currently under construction: the main sections and the data system with JSON Server have been implemented, and the integration of new features such as an AI-powered chatbox is still pending."
-      }
+      },
+      "15":{
+        "description": "An image converter developed in Python using the Pillow (PIL) library. It allows converting a single image or multiple images within a folder into various popular formats.."
+      },
+      "16":{
+        "description": "A Word (.docx) to PDF document converter developed in Python, capable of converting multiple files automatically from a source folder to a destination folder."
     }
-  },
-  "education": {
-    "certificates": [
-      {
-        "id": 1,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Int. C# - Web Programming with .Net Core",
-        "date": "EducacionIT (January 2024 - April 2024)",
-        "description": "Int. C# - Web Programming with .Net Core",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/1/folders/1_lz2HH50grQlIBUVGcgVAECtbceBT6Yt",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 2,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Fundamentals of Design and User Experience",
-        "date": "Coursera | Google (2023-2024)",
-        "description": "Coursera | Google",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/1/folders/1_lz2HH50grQlIBUVGcgVAECtbceBT6Yt",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 3,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Full Stack Web Development MERN Training | Interpersonal Skills Training",
-        "date": "Salesforce | Pescar Foundation | EducacionIT (June 2023 - December 2023)",
-        "description": "HTML | CSS | JavaScript | Git | Node.JS | React.JS | MongoDB",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1OpgihF2KKpHBuAxrHpsEE3SucBPsXEcV",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 4,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Full Stack Web Development",
-        "date": "UTN Buenos Aires | Incluyeme (June 2023 - November 2023)",
-        "description": "HTML | CSS | JavaScript | Git | Node.JS | Express.JS",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1ih26KNk7bsefebzcp0GNcFlZvWNO6kkP",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 5,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Programming Technician",
-        "date": "Universidad Siglo XXI | Teclab Technical College (March 2021 - January 2024)",
-        "description": "HTML | CSS | JavaScript | React | SQL | MySQL | AWS | JSON API",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1Svp6XB6_SbWIxZQ5B-vXH-0rtXD5HX-w",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 6,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Salesforce Developer",
-        "date": "Guayerd (2022-2023)",
-        "description": "HTML | CSS | JavaScript | Salesforce | Apex",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1BsZnA48w1fhppHU2ASfhwkZ_Lfba-Inw",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 7,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Initial Programming with Java (208 hours)",
-        "date": "Codo a codo 4.0 (December 2022)",
-        "description": "Initial programming with Java",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1TL10L_ILIkmNOOcL1yVnIB7sA-kozYwT",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 8,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Introduction to Robotics (12 hours)",
-        "date": "@serte (November 2022)",
-        "description": "Introduction to robotics",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1OLdKx2MRCvHlWofbM4wKdCpMKpPnKzx9",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 9,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "First Steps in Python and OOP (16 hours)",
-        "date": "Arrow Academy (2021)",
-        "description": "Introduction to programming with Python",
-        "button": {
-          "text": "CERTIFICATE",
-          "link": "https://drive.google.com/drive/u/0/folders/1OLdKx2MRCvHlWofbM4wKdCpMKpPnKzx9",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      }
-    ]
   }
+}
 }
