--- a/src/assets/json/locale/es.json
+++ b/src/assets/json/locale/es.json
@@ -88,137 +88,13 @@
       },
             "14":{
         "description": "Este proyecto es un sitio web en desarrollo creado con Next.js.Actualmente se encuentra en construcción: se han implementado las secciones principales y el sistema de datos con JSON Server, y queda pendiente la integración de nuevas funcionalidades como un chatbox con IA.."
+      },
+      "15":{
+        "description": "Un convertidor de imágenes desarrollado en Python utilizando la librería Pillow (PIL) .Permite convertir una imagen individual o múltiples imágenes dentro de una carpeta a distintos formatos populares."
+    },
+    "16":{
+        "description": "Un conversor de documentos Word (.docx) a PDF desarrollado en Python, capaz de convertir múltiples archivos automáticamente desde una carpeta de origen hacia una carpeta de destino."
       }
     }
-  },
-  "education": {
-    "certificates": [
-      {
-        "id": 1,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Int. C# - Programación Web con .Net Core",
-        "date": "EducacionIT (Enero 2024 - Abril 2024)",
-        "description": "Int. C# - Programación Web con .Net Core",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/1/folders/1_lz2HH50grQlIBUVGcgVAECtbceBT6Yt",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 2,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Aspectos básicos del diseño y Experiencia del usuario",
-        "date": "Coursera | Google (2023-2024)",
-        "description": "Coursera | Google",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/1/folders/1_lz2HH50grQlIBUVGcgVAECtbceBT6Yt",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 3,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Formación en Programación Web Full Stack MERN | Formación en Habilidades Interpersonales",
-        "date": "Salesforce | Fundación Pescar | EducacionIT (Junio 2023 - Diciembre 2023)",
-        "description": "HTML | CSS | JavaScript | Git | Node.JS | React.JS | MongoDB",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1OpgihF2KKpHBuAxrHpsEE3SucBPsXEcV",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 4,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Desarrollo Web Full Stack",
-        "date": "UTN Buenos Aires | Incluyeme (Junio 2023 - Noviembre 2023)",
-        "description": "HTML | CSS | JavaScript | Git | Node.JS | Express.JS",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1ih26KNk7bsefebzcp0GNcFlZvWNO6kkP",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 5,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Tecnicatura en Programación",
-        "date": "Universidad Siglo XXI | Teclab Instituto Técnico Superior (Marzo 2021 - Enero 2024)",
-        "description": "HTML | CSS | JavaScript | React | SQL | MySQL | AWS | API JSON",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1Svp6XB6_SbWIxZQ5B-vXH-0rtXD5HX-w",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 6,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Desarrollador Salesforce",
-        "date": "Guayerd (2022-2023)",
-        "description": "HTML | CSS | JavaScript | Salesforce | Apex",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1BsZnA48w1fhppHU2ASfhwkZ_Lfba-Inw",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 7,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Programación inicial con Java (208hs)",
-        "date": "Codo a codo 4.0 (Diciembre 2022)",
-        "description": "Programación inicial con Java",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1TL10L_ILIkmNOOcL1yVnIB7sA-kozYwT",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 8,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Introducción a la robótica (12hs)",
-        "date": "@serte (Noviembre 2022)",
-        "description": "Introducción a la robótica",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1OLdKx2MRCvHlWofbM4wKdCpMKpPnKzx9",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      },
-      {
-        "id": 9,
-        "iconPath": "M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253",
-        "badge": "Primeros pasos en Python y POO (16hs)",
-        "date": "Arrow Academy (2021)",
-        "description": "Introducción a la programación con Python",
-        "button": {
-          "text": "CERTIFICADO",
-          "link": "https://drive.google.com/drive/u/0/folders/1OLdKx2MRCvHlWofbM4wKdCpMKpPnKzx9",
-          "iconPaths": [
-            "M4 2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v12h16V4H4zm8 3a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 8 2 2 2-2 2 2 2-2"
-          ]
-        }
-      }
-    ]
   }
 }
